@@ -1,3 +1,8 @@
+2002-04-30  Jason R. Mastaler  <jason@mastaler.com>
+
+	* Defaults.py: Include example settings for optional variables
+	here instead of sample.tmdarc.
+	
 2002-04-30  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Version.py (PLATFORM): Use distutils.util.get_platform().
